killing more orphans

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -277,11 +277,11 @@ Table \ref{tbl:prestudy2} shows the raw results of the process described.  A num
 
 Looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album(s) featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific capabilities and needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
 
-The second finding is that equivalent properties were only rarely given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modelled as a subtree in the other.  We also encountered only 2 examples where data was nested in textual description fields, both from records in the Weather category, which hints their intended use in RSS feed readers rather than in structured database applications.  Examples of modelling/semantic heterogeneity instances were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and mismatches in units of measurement (commonly found in the Weather forecast measurements).
+The second finding is that equivalent properties were rarely given the same name.  Thus, terminological heterogeneity was prevalent across the data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modelled as a subtree in another.  We also encountered only 2 examples where data was nested in textual description fields, both from records in the Weather category, which hints at their intended use in RSS feed readers rather than in structured database applications.  Examples of semantic heterogeneity were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and mismatches in units of measurement (commonly found in the Weather forecast measurements).
 
-Although not included in the table above, we also examined the source schemas of many of the data sources for property enumerated type values.  There was substantial terminological inconsistency among such values, but also cases where some sources had values not represented in the other source's sets.  For example, the property ``gender''  on Facebook allowed only supported ``male'' and ``female'' for values, while Google+ included a third option,``other''.  ``Relationship status'' was another which was similarly complex, as none of the string representations of enumerated value sets matched across data sources perfectly.
+Although not included in the table above, we also examined the source schemas of many of the data sources for enumerated type values.  There was substantial terminological inconsistency among such values, but also cases where some sources had values not represented by other sources.  For example,  ``gender''  on Facebook allowed only supported ``male'' and ``female'' for values, while Google+ included a third option,``other''.  ``Relationship status'' was another which was similarly complex, as none of the string representations of enumerated value sets matched across data sources perfectly.
 
-In summary, while data records ranged in complexity, no source subsumed the rest; all contained unique properties other sources did not have.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
+In summary, while data records ranged in complexity, no source subsumed the rest; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
 
 %\section{Designing the DataPalette Interface}
 \section{DataPalette : An Interface for Data Mixing}
@@ -301,7 +301,7 @@ The two pre-studies provided valuable insight towards this goal that allowed us 
 \subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with the mechanisms for facilitating the various aspects of effective data mixing that we describe in the next section. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, however, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, we decided to break up RDF-like relational data into discrete instances with properties. Such chunking was implemented in a generic manner to work with all major Web data feed types (e.g., JSON, XML, RDF).
+In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (e.g., JSON, XML, RDF) without any loss of generality.
 
 \subsubsection{Multi-path selection: link-sliding for heterogeneous sets}
 
