--- a/chi2012.tex
+++ b/chi2012.tex
@@ -273,9 +273,7 @@ Once established, equivalent properties were examined firstly for naming inconsi
 Finally, we examined equivalent fields which were incomparable for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-Table \ref{tbl:prestudy2} shows the raw results of the process described.  A number of features were quite striking about the data; First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories.
-
-Looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album(s) featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific capabilities and needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
+Table \ref{tbl:prestudy2} shows the raw results of the process described.  A number of features were quite striking about the data; First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories. Looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
 
 The second finding is that equivalent properties were rarely given the same name.  Thus, terminological heterogeneity was prevalent across the data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modelled as a subtree in another.  We also encountered only 2 examples where data was nested in textual description fields, both from records in the Weather category, which hints at their intended use in RSS feed readers rather than in structured database applications.  Examples of semantic heterogeneity were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and mismatches in units of measurement (commonly found in the Weather forecast measurements).
 
