--- a/chi2012.tex
+++ b/chi2012.tex
@@ -586,7 +586,7 @@ A key design decision we made at the outset was to target only the most common f
 
 \subsection{Study Limitations}
 
-Our study had several limitations.  First, the small sample size of our study (20 participants) meant that we could not confirm some of the effects observed with statistical significance.  Second, giving participants a time limit of 10 minutes on trials may have affected the strategies they used to make their choices.  For this reason, in our follow-up study, we will try to give some participants unlimited time on tasks of similar complexity.  A second departure from a realistic task was the way in which we pre-determined the data sources for participants to use.  We did this in order to focus participants' efforts on looking at and working with their choices, rather than retrieving it.  However, as supporting effective retrieval and serendipitous discovery will be important for DP to be useful in practice, we plan to look at supporting these stages in the future. 
+Our study had several limitations.  First, the small sample size of our study (20 participants) meant that we could not confirm some of the effects observed with statistical significance.  Second, giving participants a time limit of 10 minutes on trials may have affected the strategies they used to make their choices.  For this reason, in our follow-up study, we will give some participants unlimited time on tasks of similar complexity.  A second departure from a realistic task was the way in which we pre-determined the data sources for participants to use.  We did this in order to focus participants' efforts on looking at and working with their choices, rather than retrieving it.  However, as supporting effective retrieval and serendipitous discovery will be important for DP to be useful in practice, we plan to look at supporting these stages in the future. 
 % \subsection{Integration Limitations}
 
 % In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
